<resources>
    <string name="app_name">NontonKuy</string>
    <string name="lewati_perkenalan">Lewati</string>
    <string name="lanjutkan">Lanjutkan</string>
    <string name="simpan_lanjutkan">Simpan dan Lanjutkan</string>
    <string name="now_playing">NOW PLAYING</string>
    <string name="coming_soon">COMING SOON</string>
    <string name="now_playing_description">Lebih mudah untuk mengetahui\nfilm yang sedang tampil</string>
    <string name="pre_sale">Pre Sale</string>
    <string name="pre_sale_description">Tidak khawatir ketinggalan\nupdate film terbaru</string>
    <string name="cashless">Cashless</string>
    <string name="cashless_description">Gunakan E-wallet untuk\ntransaksi tiket nonton</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="photo">Photo</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="name">Nama</string>
    <string name="email_address">Email Address</string>
    <string name="selamat_datang">Selamat Datang,\nNama</string>
    <string name="story_board">Storyboard</string>
    <string name="who_played">Who’s Played</string>
    <string name="choose_seat">Pilih Kursi</string>
    <string name="beli_tiket">BELI TIKET</string>
    <string name="bayar_sekarang">BAYAR SEKARANG</string>
    <string name="masuk_akun">MASUK</string>
    <string name="daftar_akun">DAFTAR</string>
    <string name="batalkan">BATALKAN</string>
    <string name="layar_bioskop">LAYAR BIOSKOP</string>
    <string name="checkout">Check Out</string>
    <string name="kapan">When</string>
    <string name="items">Items</string>
    <string name="e_wallet">E-Wallet</string>
    <string name="datetime">Date &amp; Time</string>
    <string name="cinema">Cinema</string>
    <string name="total_balance">Total Balance</string>
    <string name="home">HOME</string>
    <string name="my_wallet">My Wallet</string>
    <string name="history">History</string>
    <string name="saldo_tersedia">Saldo Tersedia</string>
    <string name="daftar_transaksi">Daftar Transaksi</string>
    <string name="lihat_tiket">LIHAT TIKET</string>
    <string name="selamat_menonton">HAPPY WATCHING!</string>
    <string name="simpan_data_baru">SIMPAN DATA BARU</string>
    <string name="success_desc">Tiket telah berhasil dibeli dan\nselamat menonton film</string>
    <string name="saldo_tidak_cukup">Saldo pada e-wallet kamu tidak mencukupi\nuntuk melakukan transaksi</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
